--- a/src/main/asciidoc/WebFX.adoc
+++ b/src/main/asciidoc/WebFX.adoc
@@ -10,7 +10,7 @@ Last updated: {docdate}
 
 === What is WebFX?
 
-WebFX is a JavaFX application transpiler powered by link:https://www.gwtproject.org[GWT^]. It can transpile a JavaFX application into a self-contained JavaScript web app that requires no plugin or server to run.
+WebFX is a JavaFX application transpiler powered by link:https://www.gwtproject.org[GWT^]. It can transpile a JavaFX application into a traditional self-contained pure JavaScript web app (no plugin or server is required for its execution in the browser).
 
 === How it works
 
@@ -70,11 +70,11 @@ The WebFX kit coverage is for now limited to the essential features of JavaFX. S
 * use only the features covered by the WebFX kit (this coverage will increase over the time)
 * be compatible with GWT (no reflection, no multi-threading, etc...)
 
-We will call a _WebFX application_ any JavaFX application that meets these 2 requirements. A WebFX application can be transpiled to the web simply by running a GWT compilation of it together with the WebFX kit.
+A JavaFX application that meets these 2 requirements is called a _WebFX application_, and it can be transpiled to the web. WebFX achieves this simply by running a GWT compilation of it together with the WebFX kit.
 
 === Fast development cycles
 
-You don't need to run a GWT compilation on each development cycle, you can simply develop, run, and debug your WebFX application like a standard JavaFX application with the OpenJFX runtime in your preferred Java IDE. Occasionally you can transpile it to test the web app.
+You don't need to run a GWT compilation on each development cycle like you would do with a traditional GWT development. Instead, you mainly develop, run, and debug your WebFX application directly in your preferred Java IDE with the OpenJFX runtime (like a standard JavaFX development). You transpile it only from time to time to test the web app.
 
 === Cross-platform
 
@@ -88,7 +88,7 @@ digraph {
 }
 ----
 
-WebFX allows you to do a full cross-platform development from a single source code base. In addition to the web platform, your WebFX application can indeed be compiled also for the desktop & mobiles to the JavaFX & Gluon toolchains.
+WebFX opens the door to a full cross-platform development from a single source code base. In addition to the web platform, your WebFX application can indeed also be compiled for the desktop & mobiles thanks to the JavaFX & Gluon toolchains.
 
 == Getting started
 
@@ -101,11 +101,11 @@ To develop WebFX applications, you will need the following software already inst
  * Git
  * Your preferred Java IDE
 
-IMPORTANT: Be sure that you can invoke `java`, `mvn` and `git` directly from the terminal. The WebFX CLI will invoke these commands without specifying their full path.
+IMPORTANT: Be sure that `java`, `mvn` and `git` are in the execution path of your terminal. The WebFX CLI will invoke these commands without specifying their full path.
 
 === Introducing the WebFX CLI
 
-The WebFX CLI is the Command Line Interface for WebFX. It's an essential tool to assist you developing WebFX applications. It will create your application modules as follows:
+The WebFX CLI is a Command Line Interface for WebFX. It's an essential tool that will assist you developing WebFX applications. It will create your application modules as follows:
 
 [plantuml, webfx-app-structure, format=svg]
 ----
@@ -123,12 +123,12 @@ Your repository
 |_ xxx-application-openjfx (4)
 end legend
 ----
-<1> This module contains the JavaFX code of your application. It is not directly executable as it is not yet bound to a specific platform.
-<2> This module targets the mobile platforms. It will call the Gluon toolchain to produce the Android / iOS executables.
-<3> This module targets the web platform. It will call GWT to produce the HTML and JS code.
-<4> This module targets the desktop platform. It will create an executable Java artifact with the OpenJFX runtime. You can also use this module to directly run and debug your application in your IDE.
+<1> This module contains the JavaFX code of your application. It is cross-platform (not yet bound to a specific platform) and therefore not executable.
+<2> This module targets the native desktop & mobile platforms. It binds your application with the OpenJFX runtime, and can call the Gluon toolchain to produce the Windows, macOS, Linux, Android & iOS native executables (depending on your OS).
+<3> This module targets the web platform. It binds your application with the WebFX kit and can call GWT to produce the web app.
+<4> This module targets the standard desktop platform. It binds your application with the OpenJFX runtime. It is directly executable in your IDE. It can also call the standard JavaFX toolchain to produce the desktop executables (Windows, macOS or Linux) with an embed JVM.
 
-You can create several WebFX applications in the same repository, such as a front office and a back office for example. Of course, if your application code grows, you can split your code into more modules. The WebFX CLI will help you to create and maintain all your modules. For each module, it will create and maintain your build files as follows (when applicable):
+You can create several WebFX applications in the same repository. If your application code grows, you can split your code into more modules. The WebFX CLI will help you to create and maintain all your modules. For each module, it will create and maintain your build files as follows (when applicable to the module):
 
 [graphviz, wbfx-cli, format=svg]
 ----
@@ -144,24 +144,23 @@ super sources, bundles, etc..."
 }
 ----
 
-Your inputs will be centralized in the WebFX module files named webfx.xml, and the WebFX CLI will generate the rest of the build chain from these webfx.xml files. For example, a typical directive in webfx.xml will be:
+Your inputs will be centralized in the WebFX module files named webfx.xml (same location as pom.xml), and the WebFX CLI will generate the rest of the build chain from these webfx.xml files. For example, a typical directive in webfx.xml will be:
 
     <dependencies>
         <used-by-source-modules/>
     </dependencies>
 
-This directive is asking the WebFX CLI to automatically generate the list of your dependencies from an analysis of your source code.
+This directive is asking the WebFX CLI to generate the list of your dependencies from an analysis of your source code. It will therefore automatically populate the dependencies in pom.xml.
 
-The WebFX CLI takes over the aspects of cross-platform development: when a feature is platform-dependent (a different implementations exists for each platform), the tool will pick up the right modules in the final executable modules (the ones matching the platform targeted by the module).
+In that process, the WebFX CLI takes over the aspects of cross-platform development: when a feature is platform-dependent (a different implementation exists for different platforms), the tool will pick up the right modules in the final executable modules (the ones matching the platform targeted by the module).
 
 === Installing the WebFX CLI
 
-We haven't published any release at this stage yet, so the way to install the WebFX CLI for now is to clone the https://github.com/webfx-project/webfx-cli[webfx-cli] repository, and build it with Maven.
+Since we haven't published any release at this stage yet, the way to install the WebFX CLI for now is to clone the https://github.com/webfx-project/webfx-cli[webfx-cli] repository, and build it with Maven.
 
-NOTE: We will distribute the WebFX CLI in a better way later, when we will publish the first official release.
+NOTE: We will distribute the WebFX CLI in a better way on the first official release.
 
 ==== Cloning the webfx-cli repository
-
 
 [source,shell,indent=0,role="primary"]
 .HTTPS
@@ -182,7 +181,7 @@ This is achieved by running the Maven _package_ goal under the webfx-cli directo
  cd webfx-cli
  mvn package
 
-IMPORTANT: As previously mentioned, WebFX CLI requires JDK 13 or above (you will get a build error with lower versions).
+IMPORTANT: As previously mentioned, WebFX CLI requires JDK 13 or above to successfully compile.
 
 This generates an executable fat jar in the target folder that we can execute with java:
 
@@ -248,7 +247,7 @@ You can check for update at anytime by running:
 
  webfx bump cli
 
-If an update is available, it will download it and build it.
+If a new version is available, it will download it and build it.
 
 === Creating your first WebFX app
 
