--- a/src/main/asciidoc/WebFX.adoc
+++ b/src/main/asciidoc/WebFX.adoc
@@ -133,7 +133,7 @@ WebFX should please Java developers who are looking for a Java full-stack soluti
 
 ==== Low learning curve
 
-WebFX is not yet another UI toolkit to learn, but nothing else than an already well known and well documented UI API: JavaFX. All the features you love like JavaFX bindings available for your web app. You will just feel at home with WebFX!
+WebFX is not yet another UI toolkit to learn, but nothing else than an already well known and well documented API: JavaFX. All the features you love like JavaFX bindings available for your web app. You will just feel at home with WebFX!
 
 ==== No server
 
@@ -183,7 +183,7 @@ end legend
 <1> This module contains the JavaFX code of your application. It is cross-platform (not yet bound to a specific platform) and therefore not executable.
 <2> This module targets the native desktop & mobile platforms. It binds your application with the OpenJFX runtime, and can call the Gluon toolchain to produce the Windows, macOS, Linux, Android & iOS native executables (depending on your OS).
 <3> This module targets the web platform. It binds your application with the WebFX kit, and can call GWT to produce the web app.
-<4> This module targets the standard desktop platform. It binds your application with the OpenJFX runtime. It is directly executable in your IDE. It can also call the standard JavaFX toolchain to produce the desktop executables (Windows, macOS or Linux) with an embed JVM.
+<4> This module targets the standard desktop platform. It binds your application with the OpenJFX runtime, and is directly executable in your IDE. It can also call the standard JavaFX toolchain to produce the desktop executables (Windows, macOS or Linux) with an embed JVM.
 
 You can create several WebFX applications in the same repository. If your application code grows, you can split your code into more modules. The WebFX CLI will help you to create and maintain all your modules. For each module, it will create and maintain your build files as follows (when applicable to the module):
 
@@ -209,13 +209,13 @@ Your inputs will be centralized in the WebFX module files named webfx.xml (same 
 
 This directive is asking the WebFX CLI to generate the list of your dependencies from an analysis of your source code, and automatically populate the dependencies in pom.xml.
 
-In that process, the WebFX CLI takes care of the cross-platform aspects: when a feature is platform-dependent (a different implementation exists for different platforms), the tool will pick up the right modules (those whose implementation matches the target platform). In particular, it will replace the OpenJFX modules with the WebFX kit ones when targeting the web.
+In that process, the WebFX CLI takes care of the cross-platform aspects: when a feature is platform-dependent (a different implementation exists for different platforms), the tool will pick up the right modules (those whose implementation matches the target platform). This is at this point for example that it will replace the OpenJFX modules with the WebFX kit ones when targeting the web.
 
 === Installing the WebFX CLI
 
 Since we haven't published any release at this stage yet, the way to install the WebFX CLI for now is to clone the https://github.com/webfx-project/webfx-cli[webfx-cli] repository, and build it with Maven.
 
-NOTE: We will distribute the WebFX CLI in a better way with the first official release.
+NOTE: We will distribute the WebFX CLI in a better way on the first official release.
 
 ==== Cloning the webfx-cli repository
 
@@ -246,7 +246,7 @@ This generates an executable fat jar in the target folder that we can execute wi
 
 ==== Creating a permanent _webfx_ alias
 
-To easily invoke the WebFX CLI from a terminal, we need to create a permanent _webfx_ alias. This is done with the following command (to run under the webfx-cli directory):
+To easily invoke the WebFX CLI from a terminal, we need to create a permanent _webfx_ alias. This is done with the following commands (to run under the webfx-cli directory):
 
 [source,shell,indent=0,role="primary"]
 .Linux
@@ -304,7 +304,7 @@ You can check for update at anytime by running:
 
  webfx bump cli
 
-If a new version is available, it will download it and build it.
+If a new version is available, it will download it and build it for you.
 
 NOTE: This is the only command that uses `git`, and it's just a `git pull` of the webfx-cli repository. The tool will not call `git` on your own repositories.
 
@@ -312,7 +312,7 @@ NOTE: This is the only command that uses `git`, and it's just a `git pull` of th
 
 ==== Creating and initializing your repository
 
-Let's create our first WebFX application. We need to create the repository folder and ask the WebFX CLI to initialize it, passing it the groupId, artifactId and version of our application.
+Let's create our first WebFX application. We need to create the repository directory and ask the WebFX CLI to initialize it, passing it the groupId, artifactId and version of our application.
 
  mkdir webfx-example
  cd webfx-example
@@ -356,7 +356,7 @@ You can run the GWT version of your application with the following command:
 
 === Developing in your IDE
 
-We will give the instructions for IntelliJ IDEA, but you should be able to easily transpose them to other Java IDEs.
+We will give the instructions for IntelliJ IDEA, but you can easily transpose them to other Java IDEs.
 
 ==== Opening the project
 
@@ -364,7 +364,7 @@ We will give the instructions for IntelliJ IDEA, but you should be able to easil
 
 A few explanation before going further: GWT has a different entry point than standard Java applications, but WebFX hides the hassle with a single cross-platform entry point that will correctly bootstrap your application. So the main class of a WebFX application will always be `dev.webfx.platform.shared.services.boot.ApplicationBooter` whatever the platform. It will find your JavaFX application because it has been automatically declared as a Java service by the WebFX CLI.
 
-NOTE: GWT normally doesn't support the Java service API, but WebFX does, because the CLI emulates it by generating a GWT super source. You can rely on this feature to declare and implement your own services. Your services can even be platform-dependent, and you can write a specific implementation for each platform. This can be a UI API, with an OpenJFX implementation, and then a GWT implementation using an alternative JS library for your web app.
+NOTE: GWT normally doesn't support the Java service API, but WebFX does, because the CLI emulates it by generating a GWT super source. You can rely on this feature to declare and implement your own services. Your services can even be platform-dependent, and you can write a specific implementation for each platform. This can be a cross-platform UI API, with an OpenJFX implementation, and then a GWT implementation using an alternative JS library for your web app.
 
 ==== Building and running the GWT application
 
